Fix overflow issues

--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ body {
 
   .about-list {
     flex-direction: row;
-    padding: 2rem 30rem;
+    justify-content: center;
     gap: 0;
   }
 
